# Poker

./: .clang-format  CMakeLists.txt  Card.h  Croupier.cpp  Croupier.h  Deck.cpp  Deck.h  Player.cpp  Table.h  cards.cpp  cards.h
scripts/: format.sh
src/: Card.h  Croupier.cpp  Croupier.h  Deck.cpp  Deck.h  Player.cpp  Player.h  Table.h  client.cpp  server.cpp
src/lib/: Card.cpp  Card.h  Croupier.h  Deck.cpp  Deck.h  Player.cpp  Player.h  Signals.cpp  Signals.h  Table.h
